[package]
name = "udt-sys"
version = "0.1.0"
authors = ["hieu"]
edition = "2018"
links = "udt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = []

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["ws2def"] }

[build-dependencies]
cc = "1.0"